completo asta el punto 7