@@ -8,6 +8,7 @@ import util.DataUtil;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Create a datastructure from the given data:
@@ -55,7 +56,16 @@ public class Kata10 {
         List<Map> lists = DataUtil.getLists();
         List<Map> videos = DataUtil.getVideos();
 
-        return ImmutableList.of(ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
+        //System.out.println(lists.toString());
+        //System.out.println(videos.toString());
+
+       var li = lists.stream().map(list ->  List.of(list.values()))
+               .flatMap( list -> list.stream())
+               .map(list -> List.of(list)).collect(Collectors.toList());
+        var lista2 = (li.get(0).get(0).stream().map(list -> list).collect(Collectors.toList()));
+
+        return ImmutableList.of(
+                ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
                 ImmutableMap.of("id", 5, "title", "The Chamber"),
                 ImmutableMap.of("id", 3, "title", "Fracture")
         )));
